# project-character-pictures

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/picture/: Picture.hpp  PictureBase.hpp  pic_base.hpp  picture.hpp
src/: Picture.cpp  PictureBase.cpp  pic_base.cpp  picture.cpp
